k8s/services/data-preprocessing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-preprocessing-svc
  namespace: hospital-ml
  labels:
    app: data-preprocessing
    tier: backend
    part-of: hospital-ml
spec:
  type: ClusterIP
  selector:
    app: data-preprocessing
  ports:
    - name: http
      port: 8000
      targetPort: http
